tests/00tspractice/o5Tuple.ts


let x:[number, string];
x = [1, 'hello'];

//x=[1,2,3]; // error
//x=[1]; // error


let y:[number, string, boolean?];

y = [1, 'hello'];
y = [1, 'hello', true]; 